# Kernel_Image

./: .gitignore  CMakeLists.txt
images/output/: sample_1280×853_out.pgm  sample_1280×853_out.ppm
include/: ImageHeader.h
include/core/: Channel.h  Image.h  Matrix.h
include/types/: PixelTypes.h
include/utils/: Convolution.h  Convolution_Engine.h  ImageIO.h
src/: CMakeLists.txt  main.cpp
src/core/: Channel.cpp  Image.cpp  Matrix.cpp
src/utils/: Convolution_Engine.cpp  ImageIO.cpp
test/: CMakeLists.txt
test/core/: test_Channel.cpp  test_ImageGray.cpp  test_ImageRGB.cpp  test_image.cpp  test_matrix.cpp
test/utils/: test_Convolution.cpp  test_ImageIO.cpp
